--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,18 +17,22 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
+        main:
+            pattern: ^/
+            anonymous: ~
 
-        secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
-            logout:
-                path:   /demo/secured/logout
-                target: /demo/
+        # login:
+        #     pattern:  ^/demo/secured/login$
+        #     security: false
+
+        # secured_area:
+        #     pattern:    ^/demo/secured/
+        #     form_login:
+        #         check_path: /demo/secured/login_check
+        #         login_path: /demo/secured/login
+        #     logout:
+        #         path:   /demo/secured/logout
+        #         target: /demo/
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
