--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+FranUserBundle:
+    resource: "@FranUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 FranPostBundle:
     resource: "@FranPostBundle/Controller/"
     type:     annotation
