--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,7 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Fran\UserBundle\Entity\User: {algorithm: sha512, iterations: 10}
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -11,31 +12,34 @@ security:
             users:
                 user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                 admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        users_db:
+            entity: { class: Fran\UserBundle\Entity\User }
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
-            pattern: ^/
-            anonymous: ~
+        login:
+            pattern:  ^/secured/login$
+            security: false
 
-        # login:
-        #     pattern:  ^/demo/secured/login$
-        #     security: false
-
-        # secured_area:
-        #     pattern:    ^/demo/secured/
-        #     form_login:
-        #         check_path: /demo/secured/login_check
-        #         login_path: /demo/secured/login
-        #     logout:
-        #         path:   /demo/secured/logout
-        #         target: /demo/
+        secured_area:
+            pattern:    ^/secured/
+            provider: users_db
+            form_login:
+                check_path: /secured/login_check
+                login_path: /secured/login
+            logout:
+                path:   /secured/logout
+                target: /
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
+
+        main:
+            pattern: ^/
+            anonymous: ~
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
