--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,6 +2,7 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         Fran\UserBundle\Entity\User: {algorithm: sha512, iterations: 10}
+        "FOS\UserBundle\Model\UserInterface": sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -17,21 +18,26 @@ security:
         secured_area:
             id: fran_user_provider
         fos_twitter:
-                id: fos_twitter.auth
+            id: fos_twitter.auth
+        fos_userbundle:
+            id: fos_user.user_manager
+        my_fos_twitter_provider:
+            id: my.twitter.user
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        secured:
-            pattern:   /secured/.*
-            fos_twitter: true
         public:
-            pattern:   /.*
-            anonymous: true
-            fos_twitter: true
-            logout: true
+            pattern:  /
+            fos_twitter:
+                login_path: /twitter/login
+                check_path: /twitter/login_check
+                default_target_path: /
+                provider: my_fos_twitter_provider
+
+            anonymous: ~
             # oauth:
             #     resource_owners:
             #         # my_github:          "/login/check-github"
